# Metal-CMake-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  metal.h
.cache/clangd/index/: AppKit.hpp.754071FB7A39C53D.idx  AppKitPrivate.hpp.FF93DB0C7D0CFC8B.idx  CADefines.hpp.B638496CA59B6CC2.idx  CAMetalDrawable.hpp.1E1C10A016C2A110.idx  CAPrivate.hpp.9B12E24FBB6FE1DD.idx  Foundation.hpp.526683DFD5453FA9.idx  MTKView.hpp.72A260B78749BF0E.idx  MTLAccelerationStructure.hpp.1ECB6A63E99E098E.idx  MTLAccelerationStructureCommandEncoder.hpp.0493F4CC8A33C857.idx  MTLAccelerationStructureTypes.hpp.305E52BC724D5423.idx  MTLArgument.hpp.022037C7B34765AF.idx  MTLArgumentEncoder.hpp.157C8191EB2EBDC2.idx  MTLBinaryArchive.hpp.C97C1330F64BC5E7.idx  MTLBlitCommandEncoder.hpp.712589448C5B304E.idx  MTLBlitPass.hpp.6113BAE8B800D27C.idx  MTLBuffer.hpp.E06C5F059CAF26EC.idx  MTLCaptureManager.hpp.38DD3195741EA8D0.idx  MTLCaptureScope.hpp.4A22CC6B75A36569.idx  MTLCommandBuffer.hpp.57AF1D30F10FDE07.idx  MTLCommandEncoder.hpp.D9CED684E15F1AC1.idx  MTLCommandQueue.hpp.E6AAD9ACDE6821F2.idx  MTLComputeCommandEncoder.hpp.D7149E3B6A5D56E6.idx  MTLComputePass.hpp.852FFDAF849C9860.idx  MTLComputePipeline.hpp.F6473D04FA5A8BD8.idx  MTLCounters.hpp.04187839918166B1.idx  MTLDefines.hpp.38E608ADBAE4948D.idx  MTLDepthStencil.hpp.E80BAFC5C3EB2B28.idx  MTLDevice.hpp.E81C3651F2565B74.idx  MTLDrawable.hpp.5DCD707692CC66FE.idx  MTLDynamicLibrary.hpp.D62AAF46A4B3CE6F.idx  MTLEvent.hpp.E24ABF6ECE078FD5.idx  (+64 more)
renderer/: Compute.cpp  Compute.h  Renderer.cpp  Renderer.h
shader/: MetalAdd.metal
